# scylla-migrate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.scripts/: init-scylla.sh
src/: lib.rs  migration.rs
